# suricata

./: .clangd  .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  README.flowtop.md  README.md  SECURITY.md  configure.ac  libsuricata-config.in  requirements.txt  shell.nix  suricata.yaml.in
.clusterfuzzlite/: Dockerfile  build.sh
.github/: PULL_REQUEST_TEMPLATE.md
etc/: Makefile.am  schema.json
examples/plugins/c-flow-logger/: .gitignore  Makefile.am  README.md  flowlogger.c
plugins/: Makefile.am
plugins/ja4t-stub/: Makefile.am  ja4t-stub.c
rules/: sameport.lua  sameport.rules  udplite.lua  udplite.rules
rust/: .gitignore  CMakeLists.txt  Cargo.lock.in  Cargo.toml.in  Makefile.am  cbindgen.toml
rust/config/: Cargo.toml  Cargo.toml.in  Makefile.am  alias.yaml  cbindgen.toml  python-dumper.py  suricata-yaml.schema.json  test.yaml
rust/config/src/: cli.rs  defaults.yaml  ffi.rs  file.rs  lib.rs  loader.rs  main.rs  validate.rs
rust/config/tests/: flat.yaml  flatten.yaml  include-list.yaml  include-one.yaml  include-tag.yaml  include-two.yaml  include-with-include.yaml  include.yaml  legacy-threading.yaml  nested-include.yaml  nulls.yaml  one.yaml  simple.yaml  test.yaml  two.yaml  with-includes.yaml
scripts/: bootstrap.py  bundle.sh  docs-almalinux9-minimal-build.sh  docs-ubuntu-debian-minimal-build.sh  generate.py  install-deps.sh  setup-app-layer.py
src/: Makefile.am  action-globals.h  alert-debuglog.c  alert-debuglog.h  alert-fastlog.c  alert-fastlog.h  alert-syslog.c  alert-syslog.h  app-layer-dcerpc-udp.c  app-layer-dcerpc.c  app-layer-dcerpc.h  app-layer-detect-proto.c  app-layer-detect-proto.h  app-layer-dhcp.c  app-layer-dnp3-objects.c  app-layer-dnp3.c  app-layer-dns-common.h  app-layer-dns-tcp.c  app-layer-dns-udp.c  app-layer-enip.c  (+1124 more)
(+729 files in other folders)
